@@ -43,7 +43,7 @@
  <action title="Edit Visualizations" action_id="daviz.edit" category="object"
     condition_expr=""
     url_expr="string:${object/absolute_url}/daviz-edit.html"
-    visible="True"
+    visible="False"
     i18n:attributes="title">
   <permission value="Modify portal content"/>
  </action>
